@@ -141,7 +141,7 @@ fi
 
 AX_CHECK_BUDDY
 
-AC_CHECK_HEADERS([sys/times.h valgrind/memcheck.h])
+AC_CHECK_HEADERS([sys/times.h valgrind/memcheck.h spawn.h])
 AC_CHECK_FUNCS([times kill alarm sigaction])
 
 LT_CONFIG_LTDL_DIR([ltdl])
