@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2015-2018 Laboratoire de Recherche et Développement de
+# Copyright (C) 2015-2019 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -155,7 +155,7 @@ grep ':.*empty input' stderr
 
 
 ltldo '{name} foo/bar/ltl2baextended' -f GFa 2>stderr && exit 1
-grep 'error:.*foo/bar/ltl2baextended -f .*>.*' stderr
+grep 'ltldo:.*foo/bar/ltl2baextended' stderr
 
 
 test 2 = `genltl --and-gf=1..4 | ltldo ltl2tgba -n2 | autfilt -c`
